<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    android:orientation="vertical"
    tools:context=".SloshedActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewHead"
        style="@style/Base.CardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="8dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/chooseText"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/choice_sl"
            android:textColor="#FFFFFF" />


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewSloshedWine"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewHead">

        <TextView
            android:id="@+id/sloshedWineText"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:text="@string/sloshed_choice_wine" />


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewSloshedBeer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sloshedOrderWineButton">

        <TextView
            android:id="@+id/sloshedBeerText"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:text="@string/sloshed_choice_beer" />


    </android.support.v7.widget.CardView>

    <ImageButton
        android:id="@+id/sloshedOrderWineButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:elevation="20dp"
        android:onClick="sloshedWineOrder"
        android:src="@drawable/button"
        app:layout_constraintEnd_toEndOf="@id/cardViewSloshedWine"
        app:layout_constraintTop_toTopOf="@id/cardViewSloshedWine" />

    <ImageButton
        android:id="@+id/sloshedOrderBeerButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:elevation="20dp"
        android:onClick="sloshedBeerOrder"
        android:src="@drawable/button"
        app:layout_constraintEnd_toEndOf="@id/cardViewSloshedBeer"
        app:layout_constraintTop_toTopOf="@id/cardViewSloshedBeer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/attention"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>