<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewHead"
        style="@style/Base.CardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="8dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/chooseText"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/choice"
            android:textColor="#FFFFFF" />


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cardViewSloshed"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewHead">

        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/button_sloshed" />


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cardViewLegless"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@id/cardViewChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewSloshed">

        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/button_legless" />


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cardViewChoice"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewLegless">

        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/button_mySelf" />


    </android.support.v7.widget.CardView>

    <ImageButton
        android:id="@+id/sloshedButton"

        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:elevation="10dp"
        android:onClick="sloshed"
        android:src="@drawable/button"
        app:layout_constraintEnd_toEndOf="@id/cardViewSloshed"

        app:layout_constraintTop_toTopOf="@id/cardViewSloshed" />

    <ImageButton
        android:id="@+id/leglessButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:elevation="10dp"
        android:onClick="legless"
        android:src="@drawable/button"
        app:layout_constraintEnd_toEndOf="@id/cardViewLegless"
        app:layout_constraintTop_toTopOf="@id/cardViewLegless" />

    <ImageButton
        android:id="@+id/choiceButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:elevation="10dp"
        android:onClick="choice"
        android:src="@drawable/button"
        app:layout_constraintEnd_toEndOf="@id/cardViewChoice"
        app:layout_constraintTop_toTopOf="@id/cardViewChoice" />


</android.support.constraint.ConstraintLayout>